# frontend

./: .env.example  .env.production  .eslintrc.cjs  .gitignore  CHANGELOG_v15.md  Dockerfile  Dockerfile.dev  LICENSE  README.md  SECURITY.md  fly.toml  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: keepalive.yml
backend/: .env.example  Cargo.toml  Dockerfile
backend/migrations/: 001_users.sql  002_sessions.sql  003_orcid_verification_queue.sql  004_auth_methods.sql  005_chat_usage.sql
backend/src/: config.rs  db.rs  error.rs  main.rs
backend/src/auth/: mod.rs  models.rs  orcid.rs  routes.rs  service.rs
backend/src/mcp/: mod.rs  routes.rs
backend/src/middleware/: auth.rs
backend/src/progress/: mod.rs  routes.rs
backend/src/registry/: mod.rs  models.rs  service.rs  worker.rs
backend/src/reputation/: mod.rs  routes.rs
backend/src/routes/: ai.rs  progress.rs  simulations.rs
backend/src/simulations/: mod.rs  routes.rs
frontend/: vite.config.ts
frontend/src/: App.tsx
src/: App.css  index.css  main.tsx
src/components/: AIAssistant.tsx  AdvancedStats.tsx  CanvasOverlayInfo.tsx  ControlsPanel.tsx  ControlsSidebar.tsx  DataExport.tsx  ExperimentGuide.tsx  ExperimentLog.tsx  ExperimentStatsPanels.tsx  FullscreenToggle.tsx  HeatmapSettings.tsx  HydrogenControls.tsx  InlineDocumentation.tsx  LabModeToggle.tsx  LabTasks.tsx  ModeInfoPanel.tsx  ModeSelector.tsx  QuantumTutor.tsx  QuizPanel.tsx  ResearchPanel.tsx  ScientificCredits.tsx  ScreenDisplayMode.tsx  SimulationControls.tsx  StatsPanel.tsx  StatsSidebar.tsx  index.ts  (+6 more)
(+44 files in other folders)
