[package]
name = "physics-tutorial-api"
version = "0.1.0"
edition = "2021"
authors = ["Bakhtiyor Ruzimatov <barust67@gmail.com>"]
description = "Backend API for DIU Physics Tutorial"
license = "MIT"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.35", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tower_governor = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }

# Auth
async-trait = "0.1"
siwe = "0.6"
jsonwebtoken = "9"
alloy-primitives = "0.7"
alloy = { version = "0.7", features = ["providers", "rpc-types", "contract", "signer-local"] }
rand = "0.8"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment
dotenvy = "0.15"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
